clusters/cl01tl/manifests/omni-tools/Deployment-omni-tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-tools
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: omni-tools
    helm.sh/chart: omni-tools-5.2.1
  namespace: omni-tools
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: omni-tools
      app.kubernetes.io/instance: omni-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: omni-tools
        app.kubernetes.io/name: omni-tools
    spec:
      enableServiceLinks: false
      serviceAccountName: omni-tools
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: TZ
              value: America/Chicago
          image: iib0011/omni-tools:0.6.0@sha256:ceb5acc317daf387634f7f212cefe4722fd1243ad1cba74203f25254195b6c69
          livenessProbe:
            httpGet:
              path: /
              port: 80
          name: main
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
        - env:
            - name: OAUTH2_PROXY_HTTP_ADDRESS
              value: 0.0.0.0:4180
            - name: OAUTH2_PROXY_METRICS_ADDRESS
              value: 0.0.0.0:44180
            - name: OAUTH2_PROXY_UPSTREAMS
              value: http://localhost:80
            - name: OAUTH2_PROXY_PROVIDER
              value: oidc
            - name: OAUTH2_PROXY_CODE_CHALLENGE_METHOD
              value: S256
            - name: OAUTH2_PROXY_SKIP_PROVIDER_BUTTON
              value: "true"
            - name: OAUTH2_PROXY_EMAIL_DOMAINS
              value: '*'
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5@sha256:8498b0d0ef0a7b29686414000a08aee467f02d0299c9ed1e006a8f33fc017916
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
          name: oauth
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
