clusters/cl01tl/manifests/omni-tools/Service-omni-tools.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-tools
  labels:
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: omni-tools
    app.kubernetes.io/service: omni-tools
    helm.sh/chart: omni-tools-5.2.1
  namespace: omni-tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: oauth
    - port: 44180
      targetPort: 44180
      protocol: TCP
      name: oauth-metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/name: omni-tools
