clusters/cl01tl/manifests/omni-tools/HTTPRoute-http-route-omni-tools.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-omni-tools
  namespace: omni-tools
  labels:
    app.kubernetes.io/name: http-route-omni-tools
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/part-of: omni-tools
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - omni-tools.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: omni-tools
          port: 80
          weight: 100
