clusters/cl01tl/manifests/omni-tools/HTTPRoute-omni-tools.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omni-tools
  labels:
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: omni-tools
    helm.sh/chart: omni-tools-5.2.1
  namespace: omni-tools
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "omni-tools.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: omni-tools
          namespace: omni-tools
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
