clusters/cl01tl/manifests/omni-tools/omni-tools.yaml
---
# Source: omni-tools/charts/omni-tools/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-tools
  labels:
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: omni-tools
    app.kubernetes.io/service: omni-tools
    helm.sh/chart: omni-tools-4.4.0
  namespace: omni-tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/name: omni-tools
---
# Source: omni-tools/charts/omni-tools/templates/common.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-tools
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: omni-tools
    helm.sh/chart: omni-tools-4.4.0
  namespace: omni-tools
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: omni-tools
      app.kubernetes.io/instance: omni-tools
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: omni-tools
        app.kubernetes.io/name: omni-tools
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - image: iib0011/omni-tools:0.6.0
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
---
# Source: omni-tools/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-omni-tools
  namespace: omni-tools
  labels:
    app.kubernetes.io/name: http-route-omni-tools
    app.kubernetes.io/instance: omni-tools
    app.kubernetes.io/part-of: omni-tools
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - omni-tools.alexlebens.net
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''
          kind: Service
          name: omni-tools
          port: 80
          weight: 100
